# path_tracer

./: .gitignore  CMakeLists.txt  README.md  antialiasing.cpp  empty_backgound.cpp  first_image.cpp  first_sphere.cpp  sphere_with_normals.cpp  sphere_with_normals_with_ground.cpp
cmake/: CPM.cmake  Config.cmake  FetchDependencies.cmake  tools.cmake
include/: axis_aligned_bounding_box.h  bounding_volume_hierarchy.h  camera.h  forward_declarations.h  hittable.h  hittable_list.h  material.h  ray.h  sphere.h  utils.h  vec.h
include/materials/: dielectric.h  lambertian.h  material.h  metal.h
src/: axis_aligned_bounding_box.cpp  bounding_volume_hierarchy.cpp  camera.cpp  hittable_list.cpp  sphere.cpp  utils.cpp  vec.cpp
src/RT1/: RT1_0_first_image.cpp  RT1_10_final.cpp  RT1_1_empty_backgound.cpp  RT1_2_first_sphere.cpp  RT1_3_sphere_with_normals.cpp  RT1_4_sphere_with_normals_with_ground.cpp  RT1_5_antialiasing.cpp  RT1_6_diffuse.cpp  RT1_7_metal.cpp  RT1_8_dielectrics.cpp  RT1_9_camera.cpp
src/RT2/: RT2_1_bvh.cpp
src/materials/: dielectric.cpp  lambertian.cpp  metal.cpp
